20211203 JCL FLP Updated

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -26,7 +26,7 @@
       data-name="sap.ui.demo.template"
       data-id="container"
       data-settings='{
-        "id": "todo"
+        "id": "appContainer"
       }'>
     </div>
   </body>
